z-index fix

--- a/web/app/themes/trace/assets/styles/structure/_header.scss
+++ b/web/app/themes/trace/assets/styles/structure/_header.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 101;
     width: 100%;
     padding: 25px 0 10px;
     transition: $transition;
